# python-project-setup

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  pyrightconfig.json
src/service_a/: main.py
src/service_b/: main.py
src/shared/types/: __init__.py  json_types.py  user.py
src/shared/utils/: __init__.py  strings.py
tests/unit/: test_utils.py
