[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-initial-project"
version = "0.1.0"
requires-python = ">=3.13.12"

[project.scripts]
service-a = "service_a.main:main"
service-b = "service_b.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
# Treat "no tests collected" (exit code 5) as success:
# pytest itself can't change the code, so we handle it in the hook instead (Option A alt below).

[tool.hypothesis]
deadline = 250
